--- a/client/index.html
+++ b/client/index.html
@@ -22,16 +22,7 @@
     const localVideo = document.getElementById('local-video');
     const remoteVideo = document.getElementById('remote-video');
     const constraints = { video: true, audio: true };
-    document.querySelector('#start').addEventListener('click', () => {
-      navigator.mediaDevices
-        .getUserMedia(constraints)
-        .then(stream => {
-          localVideo.srcObject = stream;
-          localVideo.play();
-        })
-        .catch(console.error);
-    });
-
+  
     const ws = new WebSocket('ws://localhost:8000/');
     ws.addEventListener('open', (event) => {
       console.log('ws open');
@@ -41,6 +32,36 @@
       console.log('ws message', event.data);
     });
     ws.addEventListener('error', (error) => console.log(error));
+
+    const peer = new RTCPeerConnection();
+    peer.addEventListener('icecandidate', e => {
+      console.log('local connection ICE candidate: ', e.candidate);
+    });
+
+    peer.addEventListener('track', e => {
+      console.log('remote stream');
+      if (e.streams) {
+        remoteVideo.srcObject = e.streams[0];
+      }
+    });
+
+    document.querySelector('#start').addEventListener('click', () => {
+      navigator.mediaDevices
+        .getUserMedia(constraints)
+        .then(stream => {
+          localVideo.srcObject = stream;
+          localVideo.play();
+          stream.getTracks().forEach(track => peer.addTrack(track));
+          return peer.createOffer()
+        })
+        .then(async (desc) => {
+          // console.log('offer is:', desc.toJSON());
+          await peer.setLocalDescription(desc);
+          ws.send(JSON.stringify(desc));
+        })
+        .catch(console.error);
+    });
+
 
   </script>
 </body>
